--- a/HTF_StackOverBros/HTF_StackOverBros/App.xaml
+++ b/HTF_StackOverBros/HTF_StackOverBros/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="StackOverBros.App"
+﻿<Application x:Class="HTF_StackOverBros.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StackOverBros"
+             xmlns:local="clr-namespace:HTF_StackOverBros"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
