Revert "new project"
This reverts commit d2c04456acf5cb4280323a6d9460f833e6d08bec.

--- a/StackOverBros/StackOverBros/App.xaml
+++ b/StackOverBros/StackOverBros/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="HTF_StackOverBros.App"
+﻿<Application x:Class="StackOverBros.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HTF_StackOverBros"
+             xmlns:local="clr-namespace:StackOverBros"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
