--- a/StackOverBros2/App.xaml
+++ b/StackOverBros2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="StackOverBros.App"
+﻿<Application x:Class="StackOverBros2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:StackOverBros"
+             xmlns:local="clr-namespace:StackOverBros2"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
