--- a/StackOverBros2/MainWindow.xaml
+++ b/StackOverBros2/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="528,41,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="528,41,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
         <ListView HorizontalAlignment="Left" Height="400" Margin="10,10,0,0" VerticalAlignment="Top" Width="411">
             <ListView.View>
                 <GridView>
